--- a/app.html
+++ b/app.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#0f1115">
   <link rel="manifest" href="manifest.json">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-  <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/style.css?v=2">
 </head>
 <body>
   <div class="topbar">
@@ -92,6 +92,6 @@
       </div>
     </section>
   </main>
-  <script src="js/app.js"></script>
+<script src="js/app.js?v=2"></script>
 </body>
 </html>
